Implementation of ChppJoint does not derive anymore from CkwsJoint.

--- a/include/hppModel/hppImplRobotDynamics.h.in
+++ b/include/hppModel/hppImplRobotDynamics.h.in
@@ -3,4 +3,7 @@
 
 #include "@ROBOTDYNAMICSIMPL@/robotDynamicsImpl.h"
 
+typedef CjrlRobotDynamicsObjectConstructor<CimplDynamicRobot, CimplHumanoidDynamicRobot, CimplJointFreeFlyer, CimplJointRotation, CimplJointTranslation, CimplBody> CrobotDynamicsConstructor;
+
+
 #endif
