Reorganization of classes.  1. ChppJoint does not derive anymore from CjrlJoint and CkwsJoint  2. ChppJointFreeFlyer, ChppJointRotation and ChppJointTranslation have been removed.

--- a/hppModel.pc.in
+++ b/hppModel.pc.in
@@ -7,5 +7,5 @@ Name: @PACKAGE@
 Description: 
 Version: @VERSION@
 Requires: 
-Libs: @ABSTRACTROBOTDYNAMICS_LIBS@ @KINEOCONTROLLER_LIBS@ -L${libdir} -lhppDevice
+Libs: @ABSTRACTROBOTDYNAMICS_LIBS@ @KINEOCONTROLLER_LIBS@ -L${libdir} -lhppModel
 Cflags: @ABSTRACTROBOTDYNAMICS_CFLAGS@ @KINEOCONTROLLER_CFLAGS@ -I${includedir}
