--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -4,10 +4,8 @@
 
 hppDevicedir = @includedir@/hppModel
 hppDevice_HEADERS = \
+	hppModel/hppBody.h \
 	hppModel/hppHumanoidRobot.h \
 	hppModel/hppDevice.h \
 	hppModel/hppJoint.h \
-	hppModel/hppJointFreeFlyer.h \
-	hppModel/hppJointRotation.h \
-	hppModel/hppJointTranslation.h \
 	hppModel/hppImplRobotDynamics.h 
