--- a/unitTesting/Makefile.am
+++ b/unitTesting/Makefile.am
@@ -8,11 +8,13 @@ testhppDevice_SOURCES = main.cpp \
 	hppDeviceTest.cpp
 
 testhppDevice_CPPFLAGS = \
-	-I$(top_srcdir)/include \
-	-I$(top_builddir)/include \
+	-I$(top_srcdir)/include/hppModel \
+	-I$(top_builddir)/include/hppModel \
 	$(ROBOTDYNAMICSIMPL_CFLAGS)$ \
-	$(KINEOCONTROLLER_CFLAGS)$
+	$(KINEOCONTROLLER_CFLAGS)$\
+	$(KWSIO_CFLAGS)
 testhppDevice_LDFLAGS = \
 	$(ROBOTDYNAMICSIMPL_LIBS)$ \
 	$(KINEOCONTROLLER_LIBS)$ \
+	$(KWSIO_LIBS) \
 	../src/.libs/libhppModel.a
