--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,15 +6,18 @@
 lib_LTLIBRARIES = libhppModel.la
 libhppModel_la_SOURCES = \
 	hppDevice.cpp \
+	hppHumanoidRobot.cpp \
 	hppBody.cpp \
 	hppJoint.cpp 
 
 libhppModel_la_LDFLAGS = \
 	$(ROBOTDYNAMICSIMPL_LIBS)$ \
-	$(KINEOCONTROLLER_LIBS)$ 
+	$(KINEOCONTROLLER_LIBS)$ \
+	$(KWSIO_LIBS)
 
 libhppModel_la_CPPFLAGS = \
-	-I$(top_srcdir)/include \
-	-I$(top_builddir)/include \
+	-I$(top_srcdir)/include/hppModel \
+	-I$(top_builddir)/include/hppModel \
 	$(ROBOTDYNAMICSIMPL_CFLAGS)$ \
-	$(KINEOCONTROLLER_CFLAGS)$
+	$(KINEOCONTROLLER_CFLAGS)$ \
+	$(KWSIO_CFLAGS)
