--- a/hppModel.pc.in
+++ b/hppModel.pc.in
@@ -8,4 +8,4 @@ Description:
 Version: @VERSION@
 Requires: @ROBOTDYNAMICSIMPL@, KineoController
 Libs: @ABSTRACTROBOTDYNAMICS_LIBS@ @KINEOCONTROLLER_LIBS@ -L${libdir} -lhppModel
-Cflags: @ABSTRACTROBOTDYNAMICS_CFLAGS@ @KINEOCONTROLLER_CFLAGS@ -I${includedir}/hppModel
+Cflags: @ABSTRACTROBOTDYNAMICS_CFLAGS@ @KINEOCONTROLLER_CFLAGS@ -I${includedir}
