Florent Lamiraux: compilation bug corrected.

--- a/unitTesting/Makefile.am
+++ b/unitTesting/Makefile.am
@@ -1,5 +1,5 @@
 # 
-#  Copyright 
+#  Copyright 2007 LAAS-CNRS
 # 
 
 
@@ -8,8 +8,8 @@ testhppDevice_SOURCES = main.cpp \
 	hppDeviceTest.cpp
 
 testhppDevice_CPPFLAGS = \
-	-I$(top_srcdir)/include/hppModel \
-	-I$(top_builddir)/include/hppModel \
+	-I$(top_srcdir)/include \
+	-I$(top_builddir)/include \
 	$(ROBOTDYNAMICSIMPL_CFLAGS)$ \
 	$(KINEOCONTROLLER_CFLAGS)$\
 	$(KWSIO_CFLAGS)
