--- a/doc/package.dox.in
+++ b/doc/package.dox.in
@@ -273,7 +273,7 @@ GENERATE_PERLMOD       = NO
 #---------------------------------------------------------------------------
 # Configuration options related to the dot tool   
 #---------------------------------------------------------------------------
-CLASS_DIAGRAMS         = YES
+CLASS_DIAGRAMS         = NO
 HIDE_UNDOC_RELATIONS   = YES
 HAVE_DOT               = YES
 CLASS_GRAPH            = NO
