Changed the class inheritance organization:   1. ChppHumanoidRobot now virtually derives from CimplHumanoidDynamicRobot and is not anymore instanciated through the template mechanism,   2. template <class HDR> ChppSpecificHumanoidRobot now derives from ChppHumanoidRobot and from HDR (optimized implementation of CimplHumanoidDynamicRobot). 1 is required by 2 and 2 makes the optimal implementation compatible with ChppHumanoidRobot.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -8,6 +8,7 @@ hppDevicedir = @includedir@/hppModel
 hppDevice_HEADERS = \
 	hppModel/hppBody.h \
 	hppModel/hppHumanoidRobot.h \
+	hppModel/hppSpecificHumanoidRobot.h \
 	hppModel/hppDevice.h \
 	hppModel/hppJoint.h \
 	hppModel/hppImplRobotDynamics.h 
