add missing doc subdir in Makefile

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,9 +3,10 @@
 # 
 
 SUBDIRS = \
-	src \
-	include \
-	unitTesting
+	src 		\
+	include 	\
+	unitTesting	\
+	doc
 
 hppModeldir = $(libdir)/pkgconfig
 hppModel_DATA = hppModel.pc
