Don't bother putting libs and cflags that are inherited from the Require: line of hppModel.pc and add missing deps in Require: tag.

--- a/hppModel.pc.in
+++ b/hppModel.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: @PACKAGE@
 Description: 
 Version: @VERSION@
-Requires: @ROBOTDYNAMICSIMPL@, KineoController
-Libs: @ABSTRACTROBOTDYNAMICS_LIBS@ @KINEOCONTROLLER_LIBS@ -L${libdir} -lhppModel
-Cflags: @ABSTRACTROBOTDYNAMICS_CFLAGS@ @KINEOCONTROLLER_CFLAGS@ -I${includedir}
+Requires: @ABTRACTIFACE_REQD@, @ROBOTDYNAMICSIMPL@, KineoController, kwsIO
+Libs: -L${libdir} -lhppModel
+Cflags: -I${includedir}
