Add figures in EXTRA_DIST so that they are included in tarball.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -16,6 +16,8 @@ EXTRA_DIST = \
 	figures/classDiagramRobot.png \
 	figures/classDiagramJoint.dot \
 	figures/classDiagramJoint.png \
+	figures/classDiagramHumanoid.dot \
+	figures/classDiagramHumanoid.png \
 	figures/classDiagramBody.dot \
 	figures/classDiagramBody.png \
 	additionalDoc/package.h 
