--- a/unitTesting/Makefile.am
+++ b/unitTesting/Makefile.am
@@ -13,11 +13,11 @@ testhppDevice_SOURCES=\
 testhppDevice_CPPFLAGS = \
 	-I$(top_srcdir)/include \
 	-I$(top_builddir)/include \
-	$(ROBOTDYNAMICSIMPL_CFLAGS)$ \
+	$(JRL_DYNAMICS_CFLAGS)$ \
 	$(KINEOCONTROLLER_CFLAGS)$\
 	$(KWSIO_CFLAGS)
 testhppDevice_LDFLAGS = \
-	$(ROBOTDYNAMICSIMPL_LIBS)$ \
+	$(JRL_DYNAMICS_LIBS)$ \
 	$(KINEOCONTROLLER_LIBS)$ \
 	$(KWSIO_LIBS) \
 	../src/.libs/libhppModel.a
