--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,5 +30,6 @@ SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION})
 
 PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} jrl-dynamics)
 PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} kwsIO)
+PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} hpp-util)
 
 INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
