When created by the parser, joint class delay creation of dynamic part.
  Joints are created without initial position. The initial position of
  the joint is provided later on. This raises an issue since it is not
  possible through CjrlJoint to change the initial position of the
  joint. For this reason, method "create" without initial position
  does not construct the CjrlJoint object, but rather should provide a
  function to create it later on (see source code of
  hpp::model::FreeflyerJoint::create(const std::string &name) and
  hpp::model::FreeflyerJoint::FreeflyerJoint()) for an example.

--- a/doc/main.hh.in
+++ b/doc/main.hh.in
@@ -21,12 +21,8 @@ It is possible to instantiate an optimized implementation of a humanoid robot th
 \subsection subsec_hppDevice_joints Joints
 
 The following figure displays the inheritance diagram between classes representing robot joints.
-\li hpp::model::impl::Joint is an implementation of CjrlJoint,
-\li hpp::model::impl::JointFreeflyer is an implementation of freeflyer joint deriving from hpp::model::impl::Joint,
-\li hpp::model::impl::JointRotation is an implementation of rotation joint deriving from hpp::model::impl::Joint,
-\li hpp::model::impl::JointTranslation is an implementation of translation joint deriving from hpp::model::impl::Joint.
 
-\image html classDiagramJoint.png "Inheritance diagram between classes implementing joints."
+\image html classDiagramJoint.png "Inheritance diagram between classes implementing joints. Red line represents pointer to object."
 
 \subsection subsec_hppDevice_bodies Bodies
 
