Update body documentation

--- a/doc/main.hh.in
+++ b/doc/main.hh.in
@@ -3,7 +3,7 @@
 
 \section sec_intro_hppDevice Introduction
 
-This package contains classes representing robots, humanoid robots, joints and bodies with 
+This package contains classes representing robots, humanoid robots, joints and bodies with
 \li dynamic properties (mass, inertia, velocity, acceleration,...) that are implemented through <a href="@ABSTRACT_ROBOT_DYNAMICS_DOXYGENDOCDIR@/main.html">robot dynamics</a> abstract interfaces,
 \li geometric properties (kinematic chain, distance to obstacles) that are implemented by <a href="@KINEOCONTROLLER_PREFIX@/share/doc/KPP SDK/html/main.html">KineoPathPlanner</a>.
 
@@ -11,7 +11,7 @@ This package contains classes representing robots, humanoid robots, joints and b
 
 \subsection subsec_hppDevice_robots Robots
 
-The following figure displays the inheritance diagram between classes of KineoWorks and robot dynamics packages and implementation classes of robot dynamics classes. classes hpp::model::impl::DynamicRobot and hpp::model::impl::HumanoidDynamicRobot are implementations of respectively CjrlDynamicRobot and CjrlHumanoidDynamicRobot. 
+The following figure displays the inheritance diagram between classes of KineoWorks and robot dynamics packages and implementation classes of robot dynamics classes. classes hpp::model::impl::DynamicRobot and hpp::model::impl::HumanoidDynamicRobot are implementations of respectively CjrlDynamicRobot and CjrlHumanoidDynamicRobot.
 \image html classDiagramRobot.png "Inheritance diagram between classes implementing robots. Lines represent inheritance, thin lines reprensent virtual inheritance."
 
 \subsubsection subsubsec_humanoid_optimized Optimized implementation of humanoid robot.
@@ -28,6 +28,9 @@ The following figure displays the inheritance diagram between classes representi
 
 The following figure displays the inheritance diagram between classes implementing robot bodies.
 \li hpp::model::impl::Body is an implementation of CjrlBody.
+\li hpp::model::Body is an sub-class of CkwsKCDBody.
+
+Unfortunately, there is not a unique class implementing both.
 
 \image html classDiagramBody.png "Inheritance diagram between classes implementing bodies."
 
