Use cmake macro to generate .kab file for test.
    * CMakeLists.txt
    * tests/CMakeLists.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -41,12 +41,8 @@ MACRO(HPP_MODEL_TEST NAME)
   TARGET_LINK_LIBRARIES(${NAME}
     ${Boost_LIBRARIES}
     ${PROJECT_NAME})
-  ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${NAME}.kab
-    DEPEND ${NAME}
-    COMMAND KineoAddonBuilder ARGS -a ${CMAKE_CURRENT_BINARY_DIR}/${NAME})
-  ADD_CUSTOM_TARGET(license DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${NAME}.kab)
-  ADD_DEPENDENCIES(license ${CMAKE_CURRENT_BINARY_DIR}/${NAME})
 ENDMACRO(HPP_MODEL_TEST)
 
 # tests.
 HPP_MODEL_TEST(load-nao)
+KINEO_STANDALONE(load-nao)
