Rename test file load-nao to load-romeo.
       * tests/CMakeLists.txt
       * tests/load-nao.cc -> tests/load-romeo.cc

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,5 +44,5 @@ MACRO(HPP_MODEL_TEST NAME)
 ENDMACRO(HPP_MODEL_TEST)
 
 # tests.
-HPP_MODEL_TEST(load-nao)
-KINEO_STANDALONE(load-nao)
+HPP_MODEL_TEST(load-romeo)
+KINEO_STANDALONE(load-romeo)
