Make path of Kineo modules configurable.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,17 @@
 
 SET(LIBRARY_NAME ${PROJECT_NAME})
 
+EXEC_PROGRAM("${PKG_CONFIG_EXECUTABLE}" ARGS
+  "--variable=moduledir" KineoController
+  OUTPUT_VARIABLE "KINEO_MODULE_DIR")
+EXEC_PROGRAM("${PKG_CONFIG_EXECUTABLE}" ARGS
+  "--variable=debug_suffix" KineoController
+  OUTPUT_VARIABLE "KINEO_DEBUG_SUFFIX")
+
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
+
+CONFIG_FILES(module-dir.hh)
+
 ADD_LIBRARY(${LIBRARY_NAME}
   SHARED
   anchor-joint.cc
