--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,8 @@ EXEC_PROGRAM("${PKG_CONFIG_EXECUTABLE}" ARGS
 EXEC_PROGRAM("${PKG_CONFIG_EXECUTABLE}" ARGS
   "--variable=debug_suffix" KineoController
   OUTPUT_VARIABLE "KINEO_DEBUG_SUFFIX")
+STRING(REGEX REPLACE "\n" "" KINEO_DEBUG_SUFFIX "${KINEO_DEBUG_SUFFIX}")
+STRING(REGEX REPLACE "\n" "" KINEO_MODULE_DIR "${KINEO_MODULE_DIR}")
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
