--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ ENDIF()
 SET(${PROJECT_NAME}_HEADERS
   include/hpp/model/anchor-joint.hh
   include/hpp/model/body.hh
+  include/hpp/model/body-factory.hh
   include/hpp/model/device.hh
   include/hpp/model/exception.hh
   include/hpp/model/freeflyer-joint.hh
