Move hack where SIZE_MAX is defined to dedicated header.
  * Header is now included where needed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ SET(${PROJECT_NAME}_HEADERS
   include/hpp/model/rotation-joint.hh
   include/hpp/model/specific-humanoid-robot.hh
   include/hpp/model/translation-joint.hh
+  include/hpp/model/types.hh
   )
 
 # Declare dependencies
