Port Body and CapsuleBody classes to Kitelab 2.07.
  * Body and CapsuleBody classes are renamed to BodyDistance and
    CapsuleBodyDistance respectively.
  * BodyDistance no longer inherits from CkwsKCDBody. BodyDistance now
    holds a CkwsKCDBodyAdvanced shared pointer as private attribute.
  * BodyDistance constructor now takes a body shared pointer and a
    string as arguments
  * CapsuleBodyDistance is still a daughter class of BodyDistance.
  * Body factory classes are no longer necessary.
  * The Device class now holds all BodyDistance objects associated with
    bodies in a vector private attribute. The vector can be accessed
    with a public getter.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,10 +35,8 @@ CONFIG_FILES(module-dir.hh)
 ADD_LIBRARY(${LIBRARY_NAME}
   SHARED
   anchor-joint.cc
-  body.cc
-  body-factory.cc
-  capsule-body.cc
-  capsule-body-factory.cc
+  body-distance.cc
+  capsule-body-distance.cc
   device.cc
   freeflyer-joint.cc
   humanoid-robot.cc
