Comply with hpp-kwsio v 1.2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ SET(${PROJECT_NAME}_HEADERS
 SEARCH_FOR_BOOST()
 ADD_REQUIRED_DEPENDENCY("abstract-robot-dynamics >= 1.16")
 ADD_REQUIRED_DEPENDENCY("jrl-dynamics >= 1.19")
-ADD_REQUIRED_DEPENDENCY("kwsIO >= 1.0")
+ADD_REQUIRED_DEPENDENCY("hpp-kwsio >= 1.1")
 ADD_REQUIRED_DEPENDENCY("KineoController >= 2.07")
 ADD_REQUIRED_DEPENDENCY("hpp-util >= 0.4")
 ADD_REQUIRED_DEPENDENCY("hpp-geometry >= 1.0.1")
