--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,7 +49,7 @@ ADD_LIBRARY(${LIBRARY_NAME}
 SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION})
 
 PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} jrl-dynamics)
-PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} kwsIO)
+PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} hpp-kwsio)
 PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} hpp-util)
 PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} hpp-geometry)
 
