Fix hpp-kwsio dependency name in tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,7 +34,7 @@ MACRO(HPP_MODEL_TEST NAME)
   ADD_TEST(${NAME} ${RUNTIME_OUTPUT_DIRECTORY}/${NAME})
 
   PKG_CONFIG_USE_DEPENDENCY(${NAME} jrl-dynamics)
-  PKG_CONFIG_USE_DEPENDENCY(${NAME} kwsIO)
+  PKG_CONFIG_USE_DEPENDENCY(${NAME} hpp-kwsio)
   PKG_CONFIG_USE_DEPENDENCY(${NAME} hpp-util)
 
   # Link against Boost.
