Use fcl for geometry
  - remove dependency to
     - Kitelab and
     - jrl-dynamics
  - add dependency to fcl,
  - implement class Body as fcl::CollisionObject container,
  - implement forward kinematics.

--- a/src/module-dir.hh.in
+++ b/src/module-dir.hh.in
@@ -1,6 +1,6 @@
 //
 // Copyright (c) 2010, 2011 CNRS
-// Authors: Florent Lamiraux
+// Author: Florent Lamiraux
 //
 // This file is part of hpp-model
 // hpp-model is free software: you can redistribute it
