Update to new version of fcl
  - move fcl forward declarations to fcl,
  - create doxygen link to fcl documentation.

--- a/doc/Doxyfile.extra.in
+++ b/doc/Doxyfile.extra.in
@@ -1,3 +1,5 @@
 INPUT = @CMAKE_BINARY_DIR@/doc \
       @CMAKE_SOURCE_DIR@/include \
       @CMAKE_SOURCE_DIR@/doc \
+
+TAGFILES=@FCL_DOXYGENDOCDIR@/fcl.doxytag=@FCL_DOXYGENDOCDIR@
